# kicad-mcp

./: LICENSE  README.md  kicad_client.py  main.py  pyproject.toml  schema.py  valid_editors.py
.github/workflows/: publish-pypi.yml
docs/: cv.json  kicad_mcp_client_cnf_example.json
kicad_mcp/: __main__.py  common_tools.py  kicad_client.py  pcb_tools.py  run_server.py  schematic_tools.py  sdk_api_params.py  server.py  utils.py
kicad_mcp_server/: __init__.py  pcb_tools.py  run_server.py  schema.py  schematic_tools.py  utils.py
