[project]
name = "kicad-mcp-server"
version = "0.1.0"
description = "KiCad MCP Server"
readme = "README.md"

license = { text = "MIT" } 
authors = [
  { name = "Ethan Chien", email = "liangtie.qian@gmail.com" }
]


requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.22",
    "typechat>=0.0.4",
    "pynng>=0.8.1",
    "psutil",
    "python-dotenv",
]

[project.scripts]
kicad-mcp-server = "kicad_mcp_server.run_server:run_server"

[tool.uv]
package = true