[project]
name = "kicad-mcp"
version = "0.1.5"
description = "KiCad MCP Server"
readme = "README.md"
requires-python = ">=3.11"

license = { text = "MIT" } 
authors = [
  { name = "Ethan Chien", email = "liangtie.qian@gmail.com" }
]


dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.22",
    "typechat>=0.0.4",
    "pynng>=0.8.1",
    "psutil",
    "python-dotenv",
]

[project.scripts]
kicad-mcp = "kicad_mcp.run_server:run_server"

[tool.uv]
package = true
# use pip mirror for faster installation
index-url = "https://mirrors.aliyun.com/pypi/simple"